# IT-Study-Program

./: .env  docker-compose.yml
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/paths/consulting/ai-it/: page.tsx
frontend/src/app/paths/consulting/case-study/: page.tsx
frontend/src/app/paths/consulting/case-study-interview/: page.tsx
frontend/src/app/paths/consulting/company-analysis/: page.tsx
frontend/src/app/paths/consulting/dx-consulting/: page.tsx
frontend/src/app/paths/consulting/foundation/: page.tsx
frontend/src/app/paths/consulting/project-manager/: page.tsx
frontend/src/app/paths/consulting/sap-consultant/: page.tsx
frontend/src/app/paths/consulting/second-interview/: page.tsx
frontend/src/app/paths/others/python-project/: page.tsx
frontend/src/app/paths/sier/appli-information/: page.tsx
frontend/src/app/paths/sier/basic-information/: page.tsx
frontend/src/app/paths/sier/first-interview/: page.tsx
frontend/src/app/paths/sier/fundamentals/: page.tsx
frontend/src/app/paths/sier/it-passport/: page.tsx
frontend/src/app/paths/sier/java-basics/: page.tsx
frontend/src/app/paths/sier/javascript/: page.tsx
frontend/src/app/paths/sier/sier-second-interview/: page.tsx
frontend/src/app/paths/sier/system-engineer/: page.tsx
frontend/src/app/paths/sier/work-system/: page.tsx
frontend/src/components/: CodeBlock.tsx  LearningPathsFlow.tsx  LearningPathsGraph.tsx
(+21 files in other folders)
